# ou_robotics_class

./: README.md
proj1ws/: README.md
proj1ws/.catkin_tools/profiles/default/: devel_collisions.txt
proj1ws/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
proj1ws/devel/include/astra_camera/: AstraConfig.h  UVCCameraConfig.h
proj1ws/devel/include/custom_behavior_actions/: DriveForward.h  DriveForwardAction.h  DriveForwardActionFeedback.h  DriveForwardActionGoal.h  DriveForwardActionResult.h  DriveForwardFeedback.h  DriveForwardGoal.h  DriveForwardResult.h
proj1ws/devel/include/gazebo_launch/: DriveForward.h  DriveForwardAction.h  DriveForwardActionFeedback.h  DriveForwardActionGoal.h  DriveForwardActionResult.h  DriveForwardFeedback.h  DriveForwardGoal.h  DriveForwardResult.h
proj1ws/devel/include/openni2_camera/: OpenNI2Config.h
proj1ws/devel/lib/astra_camera/: astra_camera_node  astra_list_devices  astra_test_wrapper  camera_node
proj1ws/devel/lib/depthimage_to_laserscan/: depthimage_to_laserscan
proj1ws/devel/lib/kobuki_keyop/: keyop
proj1ws/devel/lib/openni2_camera/: list_devices  openni2_camera_node  test_wrapper
proj1ws/devel/lib/pkgconfig/: astra_camera.pc  astra_launch.pc  gazebo_launch.pc  (+42 more)
proj1ws/src/major_project/: CMakeLists.txt
proj1ws/src/project_1/: README.md
proj1ws/src/project_2/: CMakeLists.txt  README.md
proj1ws/src/project_2/launch/: rviz_launch.launch  turtlebot_gazebo.launch.save
proj1ws/src/project_2/models/proj1/: model.config
proj1ws/src/project_2/src/: drive_forward.py
proj1ws/src/project_2/world/: proj1.world
(+182 files in other folders)
